# SI4-SecTrans

./: .gitignore  CMakeLists.txt  FetchB64.cmake  FetchCMocka.cmake  FetchSodium.cmake  README.md
docs/: libclient_decompiled.c  libserver_decompiled.c  post-coding.md  pre-coding.md
src/: sectrans.c
src/client/: client.c  client_message.c  client_utils.c
src/include/: client.h  client_message.h  client_utils.h  common.h  encryption.h  file.h  message.h  server.h  server_message.h  server_utils.h
src/server/: server.c  server_message.c  server_utils.c
tests/: client.c
